--- a/destinations.html
+++ b/destinations.html
@@ -14,7 +14,46 @@
 </head>
 <body>
     
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark  shadow-sm">
+        <div class="container-fluid ">
+
+            <a class="navbar-brand text-light" href="#" style="font-family: Playwrite CU serif;">Explore the world </a>
+
+
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav "
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation ">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <span class="navbar-toggler-icon "></span>
+                <ul class="navbar-nav ms-auto">
+
+                    <li class="nav-item ">
+                        <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+                    </li>
+
+
+                    <li class="nav-item ">
+                        <a class="nav-link text-light" href="destinations.html">Destinations</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="packages.html">Packages</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+
+
     <div class="container my-4">
         <h2 class="text-center" style="margin-bottom: 30px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Popular Destinations</h2>
         <div class="row">
@@ -24,7 +63,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Paris</h5>
                         <p class="card-text">Explore the romantic streets of Paris.</p>
-                        <a href="packages.html" class="btn btn-success" style="margin-left:100px;">View More</a>
+                        <a href="packages.html" class="btn btn-success" style="margin-left:120px;">View More</a>
                     </div>
                 </div>
             </div>
@@ -34,7 +73,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Tokyo</h5>
                         <p class="card-text">Experience the vibrant culture of Tokyo.</p>
-                        <a href="packages.html" class="btn btn-primary" style="margin-left:100px;">View More</a>
+                        <a href="packages.html" class="btn btn-primary" style="margin-left:120px;">View More</a>
                     </div>
                 </div>
             </div>
@@ -44,7 +83,7 @@
                     <div class="card-body">
                         <h5 class="card-title">New York</h5>
                         <p class="card-text">The city that never sleeps awaits you.</p>
-                        <a href="packages.html" class="btn btn-success"  style="margin-left:100px;">View More</a>
+                        <a href="packages.html" class="btn btn-success"  style="margin-left:120px;">View More</a>
                     </div>
                 </div>
             </div>
@@ -55,11 +94,11 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card shadow">
-                            <img src="./temple-1670926_1280.jpg" class="card-img-top" style="height: 235px;" alt="Paris">
+                            <img src="./temple-1670926_1280.jpg" class="card-img-top" style="height: 280px;" alt="Paris">
                             <div class="card-body">
                                 <h5 class="card-title">Thailand</h5>
                                 <p class="card-text"> Southeast Asia with a rich culture, beautiful landscapes.</p>
-                                <a href="packages.html" class="btn btn-primary" style="margin-left:100px;">View More</a>
+                                <a href="packages.html" class="btn btn-primary" style="margin-left:120px;">View More</a>
                             </div>
                         </div>
                     </div>
@@ -69,7 +108,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Malaysia</h5>
                                 <p class="card-text">Southeast Asia that is a federation of Peninsular Malaysia and East Malaysia.</p>
-                                <a href="packages.html" class="btn btn-success" style="margin-left:100px;">View More</a>
+                                <a href="packages.html" class="btn btn-success" style="margin-left:120px;">View More</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +118,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Singapore</h5>
                                 <p class="card-text"> tropical island in Southeast Asia, off the southern tip of the Malay Peninsula.</p>
-                                <a href="packages.html" class="btn btn-primary" style="margin-left:100px;">View More</a>
+                                <a href="packages.html" class="btn btn-primary" style="margin-left:120px;">View More</a>
                             </div>
                         </div>
                     </div>
@@ -92,7 +131,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Bali</h5>
                                         <p class="card-text">its natural beauty, cultural traditions, and religious celebrations. </p>
-                                        <a href="packages.html" class="btn btn-success" style="margin-left:100px;">View More</a>
+                                        <a href="packages.html" class="btn btn-success" style="margin-left:120px;">View More</a>
                                     </div>
                                 </div>
                             </div>
@@ -102,7 +141,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Maldives</h5>
                                         <p class="card-text">island country in the Indian Ocean, made up of a chain of coral islands.</p>
-                                        <a href="packages.html" class="btn btn-primary" style="margin-left:100px;">View More</a>
+                                        <a href="packages.html" class="btn btn-primary" style="margin-left:120px;">View More</a>
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +151,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">UK</h5>
                                         <p class="card-text">England, Wales, and Scotland—as well as the northern portion of the island of Ireland.</p>
-                                        <a href="packages.html" class="btn btn-success" style="margin-left:100px;">View More</a>
+                                        <a href="packages.html" class="btn btn-success" style="margin-left:120px;">View More</a>
                                     </div>
                                 </div>
                             </div>
