--- a/packages.html
+++ b/packages.html
@@ -8,6 +8,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark  shadow-sm">
+        <div class="container-fluid ">
+
+            <a class="navbar-brand text-light" href="#" style="font-family: Playwrite CU serif;">Explore the world </a>
+
+
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav "
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation ">
+                <span class="navbar-toggler-icon "></span>
+            </button>
+
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <span class="navbar-toggler-icon "></span>
+                <ul class="navbar-nav ms-auto">
+
+                    <li class="nav-item ">
+                        <a class="nav-link active text-light" aria-current="page" href="index.html">Home</a>
+                    </li>
+
+
+                    <li class="nav-item ">
+                        <a class="nav-link text-light" href="destinations.html">Destinations</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="packages.html">Packages</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link text-light" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
     
     <div class="container my-5">
         <h2 class="text-center">Our Travel Packages</h2>
@@ -25,7 +65,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card shadow" >
-                    <img src="./lobby-398845_640.jpg"  style="height: 238px;" class="card-img-top" alt="Luxury Escape" style="height:240px">
+                    <img src="./lobby-398845_640.jpg"  style="height: 270px;" class="card-img-top" alt="Luxury Escape" style="height:240px">
                     <div class="card-body">
                         <h5 class="card-title">Luxury Escape</h5>
                         <p class="card-text">Indulge in a luxurious getaway.</p>
