--- a/destinations.html
+++ b/destinations.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card shadow">
-                    <img src="./eiffel-tower-5055438_640.jpg" class="card-img-top" alt="Paris">
+                    <img src="./eiffel-tower-5055438_640.jpg" class="card-img-top" style="height: 280px;" alt="Paris">
                     <div class="card-body">
                         <h5 class="card-title">Paris</h5>
                         <p class="card-text">Explore the romantic streets of Paris.</p>
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card shadow">
-                    <img src="./tokyo-3131978_640.jpg" class="card-img-top" alt="Tokyo">
+                    <img src="./tokyo-3131978_640.jpg" class="card-img-top" style="height: 280px;" alt="Tokyo">
                     <div class="card-body">
                         <h5 class="card-title">Tokyo</h5>
                         <p class="card-text">Experience the vibrant culture of Tokyo.</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card shadow">
-                    <img src="./empire-state-building-6858030_640.jpg" class="card-img-top" alt="New York">
+                    <img src="./empire-state-building-6858030_640.jpg" class="card-img-top" style="height: 280px;" alt="New York">
                     <div class="card-body">
                         <h5 class="card-title">New York</h5>
                         <p class="card-text">The city that never sleeps awaits you.</p>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card shadow">
-                            <img src="./kong-kuala-2937763_1280.jpg" class="card-img-top" alt="Tokyo">
+                            <img src="./kong-kuala-2937763_1280.jpg" class="card-img-top" style="height: 280px;" alt="Tokyo">
                             <div class="card-body">
                                 <h5 class="card-title">Malaysia</h5>
                                 <p class="card-text">Southeast Asia that is a federation of Peninsular Malaysia and East Malaysia.</p>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card shadow">
-                            <img src="./singapore-79116_640.jpg" class="card-img-top" alt="New York">
+                            <img src="./singapore-79116_640.jpg" class="card-img-top" style="height: 280px;" alt="New York">
                             <div class="card-body">
                                 <h5 class="card-title">Singapore</h5>
                                 <p class="card-text"> tropical island in Southeast Asia, off the southern tip of the Malay Peninsula.</p>
@@ -127,7 +127,7 @@
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="card shadow">
-                                    <img src="./bali-7969001_1280.jpg" class="card-img-top" alt="Paris">
+                                    <img src="./bali-7969001_1280.jpg" class="card-img-top" style="height: 280px;" alt="Paris">
                                     <div class="card-body">
                                         <h5 class="card-title">Bali</h5>
                                         <p class="card-text">its natural beauty, cultural traditions, and religious celebrations. </p>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card shadow">
-                                    <img src="./veligandu-island-1044366_640.jpg" class="card-img-top" alt="Tokyo">
+                                    <img src="./veligandu-island-1044366_640.jpg" class="card-img-top" style="height: 280px;" alt="Tokyo">
                                     <div class="card-body">
                                         <h5 class="card-title">Maldives</h5>
                                         <p class="card-text">island country in the Indian Ocean, made up of a chain of coral islands.</p>
@@ -147,7 +147,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="card shadow">
-                                    <img src="./england-4113666_640.jpg" class="card-img-top" alt="New York">
+                                    <img src="./england-4113666_640.jpg" class="card-img-top" style="height: 280px;" alt="New York">
                                     <div class="card-body">
                                         <h5 class="card-title">UK</h5>
                                         <p class="card-text">England, Wales, and Scotland—as well as the northern portion of the island of Ireland.</p>
